# git-timestamps

./: .timestamps.json  ___start.txt  __tree.txt  pyproject.toml
.type-check-result/: mypy-src.txt  pyright-src.txt
settings/: ignore.yaml  projects.yaml  repos_single.yaml
src/: main.py  read_data.py  update.py
src/helper/: argsparse.py  read_data.py  rekursion.py  timestamps.py
