[project]
name = "git-timestamp"
version = "0.1.1"
description = "..."
authors = [
  { name="Jürgen Schoenemeyer", email="js007@web.de" },
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "types-pyyaml>=6.0.12.20241230",
]
